--- a/app/assets/css/styles.css
+++ b/app/assets/css/styles.css
@@ -1,4 +1,5 @@
 @import "normalize.css";
+@import "../vendor/prism.css";
 
 html {
 	box-sizing: border-box;
@@ -21,4 +22,14 @@ html {
 
 .code {
 	width: 65%;
+}
+
+code[class*="language-"] {
+	tab-size: 2;
+}
+
+pre[class*="language-"] {
+	margin: 0;
+	padding-top: 0;
+	padding-bottom: 0;
 }
