--- a/templates/docs.tmpl.html
+++ b/templates/docs.tmpl.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="assets/build/styles.css">
 </head>
 <body>
-	<div class="content">
+	<div class="content language-js">
 		{% for block in blocks %}
 			<h2>{{ block.path }}</h2>
 
@@ -15,7 +15,7 @@
 				<div class="row">
 					<div class="docs">{{ doc.docs | safe }}</div>
 					<div class="code">
-						<pre><code>{{ doc.code | replace('\t', '  ') }}</code></pre>
+						<pre><code>{{ doc.code }}</code></pre>
 					</div>
 				</div>
 			{% endfor %}
@@ -23,6 +23,7 @@
 	</div>
 
 	<!-- We're not actually using it, but the reader will! -->
+	<script src="assets/vendor/prism.js"></script>
 	<script src="../dist/bundle.js"></script>
 </body>
 </html>
